fix overflow

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 ::-webkit-scrollbar {
   width: 0.25rem;
